--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,6 @@
     "singleQuote": false,
     "trailingComma": "none",
     "bracketSpacing": true,
-    "jsxBracketSameLine": false,
-    "fluid": false,
-    "printWidth": 120
+    "bracketSameLine": false,
+    "fluid": false
 }
