--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "10.0.0-rc1",
     "description": "Blue React Components",
     "license": "LGPL-3.0-or-later",
+    "type": "module",
     "main": "index.js",
     "types": "index.d.ts",
     "homepage": "https://bruegmann.github.io/blue-react/v10",
@@ -14,12 +15,13 @@
         "url": "https://github.com/bruegmann/blue-react/issues"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build-docs": "react-scripts build && npm run docgen",
+        "start": "vite",
+        "build-docs": "tsc -b && vite build && npm run docgen",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+        "preview": "vite preview",
         "build-types": "tsc --declaration --emitDeclarationOnly --declarationDir ./dist/types --noEmit false",
         "build": "babel ./src/components --out-dir ./dist/components --extensions \".tsx,.js,.ts\"",
-        "build-css": "node ./setVersionToStyleScss.js && node-sass ./dist/style.scss ./dist/style.css && npx postcss ./dist/style.css --use autoprefixer -r && npx postcss ./dist/style.css --use postcss-minify -o ./dist/style.min.css",
-        "build-release": "npm run build-types && npm run build && npm run build-css && npm run docgen",
+        "build-release": "npm run build-types && npm run build && npm run docgen",
         "docgen": "react-docgen ./src/components/ -o ./src/docs/data/docs.json --extension tsx && node followUpDocs && npm run license-report",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -44,23 +46,19 @@
         "@babel/preset-env": "^7.10.4",
         "@babel/preset-react": "^7.10.4",
         "@babel/preset-typescript": "^7.9.0",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.5.0",
-        "@testing-library/user-event": "^7.2.1",
         "@types/bootstrap": "^5.0.17",
-        "@types/jest": "^24.9.1",
-        "@types/node": "^12.12.47",
         "@types/react": "^19.0.2",
         "@types/react-dom": "^19.0.2",
         "@types/react-router-dom": "^5.3.3",
         "@types/react-syntax-highlighter": "^13.5.0",
-        "autoprefixer": "^10.3.6",
+        "@typescript-eslint/eslint-plugin": "^7.15.0",
+        "@typescript-eslint/parser": "^7.15.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "eslint": "^8.57.0",
+        "eslint-plugin-react-hooks": "^4.6.2",
+        "eslint-plugin-react-refresh": "^0.4.7",
         "gh-pages": "^3.1.0",
         "license-report": "^6.2.0",
-        "lint-staged": "^11.1.2",
-        "node-sass": "^9.0.0",
-        "postcss-cli": "^9.0.1",
-        "postcss-minify": "^1.1.0",
         "prettier": "2.4.1",
         "react": "^19.0.0",
         "react-bootstrap-icons": "^1.9.1",
@@ -68,24 +66,10 @@
         "react-dom": "^19.0.0",
         "react-markdown": "^9.0.1",
         "react-router-dom": "^5.3.3",
-        "react-scripts": "^5.0.1",
         "react-syntax-highlighter": "^15.4.3",
         "reactstrap": "^9.0.0-0",
-        "typescript": "^4.9.5"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
+        "sass": "1.77.6",
+        "typescript": "^5.2.2",
+        "vite": "^5.3.4"
     }
 }
