--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.5",
-        "blue-web": "^1.14.0",
+        "blue-web": "file:../blue-web/blue-web-1.14.30.tgz",
         "bootstrap": "~5.3.3",
         "clsx": "^1.1.1"
     },
     "peerDependencies": {
-        "react": "^17.0.0 || ^18.0.0 || ^19.0.0"
+        "react": "^18.0.0 || ^19.0.0"
     },
     "devDependencies": {
         "@babel/cli": "^7.10.4",
